Closed Bug 1712680 Opened 2 years ago Closed 2 years ago

[Wayland] Sometimes wl_subsurface input region is not set

Categories

(Core :: Widget: Gtk, defect, P3)

defect

Tracking

()

RESOLVED FIXED
90 Branch
Tracking Status
firefox90 --- fixed

People

(Reporter: stransky, Assigned: stransky)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

Input region setting sometimes does not take effect and we end up with wl_subsurface getting input from Gtk instead of routing it to Gtk.

Summary: [Wayland] Sometimes input region is not set → [Wayland] Sometimes wl_subsurface input region is not set
See Also: → 1712685

A follow up filed as Bug 1712685 for the wl_subsuface proper initialization.

Pushed by stransky@redhat.com:
https://hg.mozilla.org/integration/autoland/rev/7e5b2abc84aa
[Wayland] Clear wl_surface input region on map and allocate event, r=jhorak
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 90 Branch
You need to log in before you can comment on or make changes to this bug.