Bug 1712680 [Wayland] Clear wl_surface input region on map and allocate event, r=jhorak

Differential Revision: https://phabricator.services.mozilla.com/D115861